# Better-Windows-Calendar

./: .gitignore  ATTRIBUTIONS.md  CLAUDE.md  CONTEXT.md  Makefile  README.md  assets.go  build.ps1  go.mod  go.sum  main.go  main.py  main_test.go  pyproject.toml  rsrc_windows_386.syso  rsrc_windows_amd64.syso  ui_bar.py  ui_tray.py
.github/workflows/: release.yml
calendar/: __init__.py  _init_.py  api.py  config.py  daemon.py  notifier.py  storage.py
docs/: azure-app-registration.md
docs/adr/: 0001-bsp-event-layout.md  0002-daemon-embedded-in-tray.md  0003-microsoft-graph-over-exchange-caldav.md  0004-oauth-credential-hardening.md  0005-single-instance-named-pipe-ipc.md  0006-eventpatch-struct-over-map-mutation.md  0007-remote-wins-conflict-resolution.md  0008-loopback-pkce-oauth.md  0009-single-instance-named-pipe.md
docs/agents/: domain.md
installer/linux/: pycalendar.desktop
installer/windows/: setup.iss
internal/api/: api.go  attachments.go  calendar.go  category.go  expand.go  import.go  import_test.go  outbox.go  outbox_test.go  recurring_ops.go  remote.go
internal/autostart/: autostart_linux.go  autostart_windows.go
internal/barsetup/: barsetup.go  barsetup_linux.go  barsetup_other.go  barsetup_windows.go
internal/caldav/: adapter.go  adapter_test.go  ics.go  (+1 more)
memory/: MEMORY.md  project_phase1_resume.md
scripts/: build-dev.ps1  build-linux.sh  build-windows.ps1  install.sh
ui/: alerts.go  bar.go  categories.go  event_detail.go  firstrun.go  grid.go  import_dialog.go  month.go  state.go  tray.go  window.go
winres/: winres.json
(+30 files in other folders)
