[project]
name = "pycalendar"
version = "0.1.0"
description = "A stateful, dynamic calendar application for Windows and Linux"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.0.0",
    "pystray>=0.19.0",
    "pillow>=10.0.0",
    "python-dateutil>=2.8.0",
    "icalendar>=5.0.0",
    "plyer>=2.1.0",
    "requests>=2.31.0",
    "win10toast>=0.9; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
pycalendar = "main:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
